Updated photos and Html

--- a/index.html
+++ b/index.html
@@ -71,9 +71,12 @@
  </div>
 
  <div class="col-lg-6 col-md-6 col-12">
-   <h2>Three...Two...One What it is, this is a podcast about relationships, life perspectives and while forming a brotherhood.</h2>
+   <h2>When something is on your mind, ya get it off your chest, you'll feel better.</h2>
    <hr>
- <p> Getitoffyochest is a podcast where the Bay Area, KCMO and the ATL connect and talk about entertainment, pop culture and situations happening over the media. The podcast we beileve in betting on ourselves and stepping out of our comfort zone. We also put a comedy spin on our topics because it'll make ya feel better to expressing and talking about the negative things that goes around in life. </p>
+ <p> Getitoffyochest is a podcast where three entreprenuers connect and talks about entertainment, pop culture and situations happening over the media. The podcast is all about growth and finding. 
+  Our converastion are intellectual, but pending the topic it can go anywhere.
+   We went from digital to having a studio when we go live every Sunday, Tuesday and Wednesday. 
+   Hosting numorous events in Kansas City, but Battle of the Sexes is our event created by Mr.Getitoffyochest himself. We hosted sporting activties like Kickball games and lot parties </p>
  
    <!-- <button class ="btn w-50">
     <a href="#">More About Getitoffyochest Podcast</a>
@@ -164,8 +167,8 @@
         </div>
       </div>
       <div class= "col-lg-4 col-md-6 col-12 pb-5">
-        <div class="card">
-          <img src="C:\Users\panze\Getitoff\photos\20220526_174501589_iOS (2).jpg" class="card-img-top" alt="...">
+        <div class="card" style="width: 18rem;">
+          <img src="photos\grizzlyRhyno.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Mike "Rhyno" Thomas</h5>
             <p class="ca rd-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
