--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       </div>
       <div class= "col-lg-4 col-md-6 col-12 pb-5">
         <div class="card">
-          <img src="C:\Users\panze\Getitoff\photos\battleofsexes3.jpg" class="card-img-top" alt="...">
+          <img src="photos\convention.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Events</h5>
             <p class="card-text">We do live shows and events for any venue, better not bring yo KIDS!!!</p>
@@ -144,7 +144,7 @@
       <div class="row">
       <div class= "col-lg-4 col-md-6 col-12 pb-5">
         <div class="card">
-          <img src="C:\Users\panze\Getitoff\photos\Host.jpg" class="card-img-top" alt="...">
+          <img src="photos\Host.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Terry "Host" Jones </h5>
             <p class="card-text">hgxhdhxhgxg</p>
@@ -156,7 +156,7 @@
       </div>
       <div class= "col-lg-4 col-md-6 col-12 pb-5">
         <div class="card">
-          <img src="C:\Users\panze\Getitoff\photos\spreadCj.jpg" class="card-img-top" alt="...">
+          <img src="photos\CJ.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Craig "Mr.Getitoffyochest" Lockett</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
