--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
   </div>
   <div class="row">
  <div class="col-lg-6 col-md-6 col-12">
-   <img src="C:\Users\panze\Getitoff\photos\trio.jpg" class="img-fluid">
+   <img src="photos\Suckit.jpg" class="img-fluid">
  </div>
 
  <div class="col-lg-6 col-md-6 col-12">
-   <h2>When something is on your mind, ya get it off your chest, you'll feel better.</h2>
+   <h2>Something on your mind,get it off yo chest, you'll feel better.</h2>
    <hr>
  <p> Getitoffyochest is a podcast where three entreprenuers connect and talks about entertainment, pop culture and situations happening over the media. The podcast is all about growth and finding. 
   Our converastion are intellectual, but pending the topic it can go anywhere.
@@ -96,7 +96,7 @@
     <div class="row">
       <div class= "col-lg-4 col-md-6 col-12 pb-5">
         <div class="card">
-          <img src="C:\Users\panze\Getitoff\photos\20220208_052451683_iOS.jpg" class="card-img-top" alt="...">
+          <img src="" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">@Getitoffyochestpodcast</h5>
             <p class="card-text">Subscribe to us on Youtube and follow us on Instagram and other social media platforms. Photo taken by...</p>
@@ -112,7 +112,7 @@
       </div>
       <div class= "col-lg-4 col-md-6 col-12 pb-5">
         <div class="card">
-          <img src="photos\convention.jpg" class="card-img-top" alt="...">
+          <img src="photos\battleofsexes3.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Events</h5>
             <p class="card-text">We do live shows and events for any venue, better not bring yo KIDS!!!</p>
@@ -144,7 +144,7 @@
       <div class="row">
       <div class= "col-lg-4 col-md-6 col-12 pb-5">
         <div class="card">
-          <img src="photos\Host.jpg" class="card-img-top" alt="...">
+          <img src="photos\terryandpj.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Terry "Host" Jones </h5>
             <p class="card-text">hgxhdhxhgxg</p>
@@ -156,7 +156,7 @@
       </div>
       <div class= "col-lg-4 col-md-6 col-12 pb-5">
         <div class="card">
-          <img src="photos\CJ.jpg" class="card-img-top" alt="...">
+          <img src="photos\spreadCj.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Craig "Mr.Getitoffyochest" Lockett</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -168,7 +168,7 @@
       </div>
       <div class= "col-lg-4 col-md-6 col-12 pb-5">
         <div class="card" style="width: 18rem;">
-          <img src="photos\grizzlyRhyno.jpg" class="card-img-top" alt="...">
+          <img src="photos\49ersRhyno.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Mike "Rhyno" Thomas</h5>
             <p class="ca rd-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
