--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="row">
       <div class= "col-lg-4 col-md-6 col-12 pb-5">
         <div class="card">
-          <img src="" class="card-img-top" alt="...">
+          <img src="photos\getitlogo.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">@Getitoffyochestpodcast</h5>
             <p class="card-text">Subscribe to us on Youtube and follow us on Instagram and other social media platforms. Photo taken by...</p>
@@ -122,10 +122,10 @@
       </div>
       <div class= "col-lg-4 col-md-6 col-12 pb-5">
         <div class="card">
-          <img src="C:\Users\panze\Getitoff\photos\20220529_170258512_iOS.jpg" class="card-img-top" alt="...">
+          <img src="photos\20231018_191519307_iOS.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title"></h5>
-            <p class="card-text">We go live on Youtube regularly every Tuesday, Wednesday and Sundays.   Tonight we have family Red from SupremeBeastBoxing joining us for WeUpWednesdays </p>
+            <p class="card-text">We go live on Youtube regularly every Tuesday, Wednesday and Sundays.  Come through and tap-in the conversation @ 7pm pft, 9pm central. </p>
             <a href="https://www.youtube.com/watch?v=OlgSmwSHZJY&ab_channel=GetItOffYoChestPodcast" class="btn btn-dark" target="__blank"> New Episode
               <ion-icon name="logo-youtube"></ion-icon>
             </a>
