--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
       </div>
       <div class= "col-lg-4 col-md-6 col-12 pb-5">
         <div class="card">
-          <img src="photos\20231018_191519307_iOS.jpg" class="card-img-top" alt="...">
+          <img src="photos\20231022_172452091_iOS.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title"></h5>
             <p class="card-text">We go live on Youtube regularly every Tuesday, Wednesday and Sundays.  Come through and tap-in the conversation @ 7pm pft, 9pm central. </p>
-            <a href="https://www.youtube.com/watch?v=OlgSmwSHZJY&ab_channel=GetItOffYoChestPodcast" class="btn btn-dark" target="__blank"> New Episode
+            <a href="https://www.youtube.com/live/nvuKI3Yqpt8?si=b_c8d6q_Pn456u9b" class="btn btn-dark" target="__blank"> New Episode
               <ion-icon name="logo-youtube"></ion-icon>
             </a>
            
